# Ceres_pose_graph_2d_optimization_r0

./: CMakeLists.txt  README.md  ceres_optimization.cpp  input_M3500.g2o  plot_results.py
